# Autonomous-Agentic-Workflow-Orchestrator

./: README.md
Autonomous Agentic Workflow Orchestrator/: README.md  pyproject.toml  requirements.txt  workflow_state.md
Autonomous Agentic Workflow Orchestrator/agentic_workflow_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Autonomous Agentic Workflow Orchestrator/agents/: __init__.py  analyst.py  base_manager.py  data_fetcher.py  manager_agent.py
Autonomous Agentic Workflow Orchestrator/app/: __init__.py  graph.py  main.py  settings.py
Autonomous Agentic Workflow Orchestrator/data/: demo.sqlite
Autonomous Agentic Workflow Orchestrator/mcp_server/: __init__.py  sqlite_server.py
Autonomous Agentic Workflow Orchestrator/schema/: __init__.py  api.py  plan.py  state.py  workflow_protocol.py
Autonomous Agentic Workflow Orchestrator/scripts/: init_demo_sqlite.py
Autonomous Agentic Workflow Orchestrator/tools/: __init__.py  analyst_tools.py  data_fetch_client.py  mcp_tool_parse.py  nl_sql.py  postgres_mcp.py  read_only_sql.py  sqlite_mcp_client.py
